--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
